--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,12 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon intoosales.png" />
     <link
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Urbanist"
+    />
+    <link
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Bitter"
     />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Poppins"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Inter"
-    />
-
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
